# Human_Tracker_Team7

./: .gitignore  CMakeLists.txt  README.md  compile_commands.json
.cache/clangd/index/: AcmeBot.cpp.30FA2698CF1B708D.idx  AcmeBot.hpp.5ADC880A6E2D5140.idx  Detector.cpp.19FBF9B4D17EE34E.idx  Detector.hpp.231D72E440C044CD.idx  Tracker.cpp.9A9E864EB812F8F2.idx  Tracker.hpp.D496C68F7C7D62B7.idx  lib.hpp.62043C88C264E55B.idx  main.cpp.0636BCBB90B10DEB.idx  main.cpp.C8122EF371689E56.idx  test.cpp.ED5A08CB04114E20.idx
.github/workflows/: run-unit-test-and-upload-codecov.yml
app/: CMakeLists.txt  main.cpp
src/: AcmeBot.cpp  CMakeLists.txt  Detector.cpp  Tracker.cpp  main.cpp
src/AcmeBot/: AcmeBot.cpp  CMakeLists.txt  Detector.cpp  Tracker.cpp  acmebot.cpp  detector.cpp  tracker.cpp
src/AcmeBot/include/: AcmeBot.hpp  Detector.hpp  Tracker.hpp  acmebot.hpp  detector.hpp  tracker.hpp
src/AcmeVision/: CMakeLists.txt  Utils.cpp  acme_vision.cpp  detector.cpp  tracker.cpp
src/AcmeVision/include/: Utils.hpp  acme_vision.hpp  detector.hpp  tracker.hpp
src/include/: AcmeBot.hpp  Detector.hpp  Tracker.hpp
test/: CMakeLists.txt  test.cpp
